# recursion

./: Cata.cabal  Cata.hs  hie.yaml
checks/: Checks.hs
